--- a/my_to_dos_application/pubspec.yaml
+++ b/my_to_dos_application/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   date_picker_timeline:
   sqflite:
   flutter_staggered_animations:
+  flutter_launcher_icons:
+  rename:
   
 dev_dependencies:
   flutter_test:
@@ -55,6 +57,24 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/appicon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "path/to/image.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "path/to/image.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "path/to/image.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
