--- a/my_to_dos_application/android/app/build.gradle
+++ b/my_to_dos_application/android/app/build.gradle
@@ -22,12 +22,6 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
-def keystoreProperties = new Properties()
-def keystorePropertiesFile = rootProject.file('key.properties')
-if (keystorePropertiesFile.exists()) {
-       keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-   }
-
 android {
     namespace "com.example.my_to_dos_application"
     compileSdk flutter.compileSdkVersion
@@ -58,23 +52,13 @@ android {
         multiDexEnabled true
     }
 
-    signingConfigs {
-       release {
-           keyAlias keystoreProperties['keyAlias']
-           keyPassword keystoreProperties['keyPassword']
-           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-           storePassword keystoreProperties['storePassword']
-       }
-   }
-   buildTypes {
-      release {
-         // TODO: Add your own signing config for the release build.
-         // Signing with the debug keys for now,
-         // so `flutter run --release` works.
-           signingConfig signingConfigs.debug
-           signingConfig signingConfigs.release
-      }
-   }
+    buildTypes {
+        release {
+            // TODO: Add your own signing config for the release build.
+            // Signing with the debug keys for now, so `flutter run --release` works.
+            signingConfig signingConfigs.debug
+        }
+    }
 }
 
 flutter {
